--- a/EventStore.VS.Tools/MyControl.xaml
+++ b/EventStore.VS.Tools/MyControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="EventStore.EventStore_VS_Tools.MyControl"
+﻿<UserControl x:Class="EventStore.VS.Tools.MyControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
