Wizard works + ProjectionsManager

--- a/src/EventStore.VSTools/Views/ThemedControls.xaml
+++ b/src/EventStore.VSTools/Views/ThemedControls.xaml
@@ -11,6 +11,31 @@
     <SolidColorBrush x:Key="InputControlBorder" Color="{DynamicResource VsColor.CommandBarMenuBorder}"></SolidColorBrush>
     <SolidColorBrush x:Key="ActiveInputControlBorder" Color="{DynamicResource VsColor.Highlight}"></SolidColorBrush>
 
+    <Style TargetType="{x:Type DataGridRow}">
+        <Style.Triggers>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter Property="Background" Value="{x:Null}" />
+                <Setter Property="BorderBrush" Value="{x:Null}" />
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{x:Null}"></Setter>
+                <Setter Property="BorderBrush" Value="{x:Null}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style TargetType="{x:Type ListViewItem}">
+        <Style.Triggers>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter Property="Background" Value="{x:Null}" />
+                <Setter Property="BorderBrush" Value="{x:Null}" />
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="{x:Null}"></Setter>
+                <Setter Property="BorderBrush" Value="{x:Null}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <Style TargetType="TextBox">
         <Setter Property="Background" Value="{DynamicResource InputControlBackround}"></Setter>
         <Setter Property="Height" Value="17"></Setter>
