--- a/src/EventStore.VSTools/Views/CreateProject/CreateProjectWizardView.xaml
+++ b/src/EventStore.VSTools/Views/CreateProject/CreateProjectWizardView.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="EventStore.VSTools.Views.CreateProject.CreateProjectWizardView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
         xmlns:wiz="clr-namespace:EventStore.VSTools.Views.CreateProject"
         Title="{Binding Title}" Height="450" Width="580"
         WindowStartupLocation="CenterScreen"
@@ -12,6 +11,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../ThemedControls.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
+
 
             <DataTemplate DataType="{x:Type wiz:StartPageViewModel}">
                 <TextBlock Text="{Binding WelcomeNote}" TextWrapping="WrapWithOverflow"></TextBlock>
@@ -43,10 +43,10 @@
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <CheckBox x:Name="chkImportProjections" Grid.Row="0">Import projections from the EventStore</CheckBox>
+                    <CheckBox x:Name="chkImportProjections" IsChecked="{Binding ShouldImportProjections}">Import projections from the EventStore</CheckBox>
 
                     <DataGrid Grid.Row="2" ItemsSource="{Binding ExistingProjections}" AutoGenerateColumns="False" 
-                              IsEnabled="{Binding ElementName=chkImportProjections, Path=IsChecked}" 
+                              IsEnabled="{Binding ElementName=chkImportProjections, Path=IsChecked, Mode=OneWay}"
                               HeadersVisibility="Column"
                               CanUserAddRows="False" CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserSortColumns="False"
                               CanUserResizeColumns="False" CanUserResizeRows="False"
@@ -64,8 +64,8 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTextColumn IsReadOnly="True" Header="Name" Binding="{Binding Name}" Width="*"></DataGridTextColumn>
-                            <DataGridTextColumn IsReadOnly="True" Header="Mode" Binding="{Binding Mode}" Width="100"></DataGridTextColumn>
+                            <DataGridTextColumn IsReadOnly="True" Header="Name" Binding="{Binding Projection.Name}" Width="*"></DataGridTextColumn>
+                            <DataGridTextColumn IsReadOnly="True" Header="Mode" Binding="{Binding Projection.Mode}" Width="100"></DataGridTextColumn>
                         </DataGrid.Columns>
                         <DataGrid.Resources>
                             <Style TargetType="{x:Type DataGridColumnHeader}">
@@ -74,7 +74,31 @@
                         </DataGrid.Resources>
                     </DataGrid>
 
-
+                </Grid>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type wiz:FinishPageViewModel}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="20"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <StackPanel Orientation="Horizontal">
+                        <Label>EventStore connection:</Label>
+                        <Label FontWeight="Bold" Content="{Binding State.EventStoreConnection}"></Label>
+                    </StackPanel>
+                    <ItemsControl Grid.Row="2" ItemsSource="{Binding State.ProjectionsToImport}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}"></TextBlock>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Vertical"></StackPanel>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
                 </Grid>
             </DataTemplate>
         </ResourceDictionary>
