--- a/src/EventStore.VSTools/Views/CreateProject/CreateProjectWizardView.xaml
+++ b/src/EventStore.VSTools/Views/CreateProject/CreateProjectWizardView.xaml
@@ -123,7 +123,7 @@
             </TextBlock>
         </Grid>
         <StackPanel Grid.Row="1" VerticalAlignment="Stretch" Margin="10,20,10,10">
-            <ContentPresenter Content="{Binding ActivePage}"></ContentPresenter>
+            <ScrollContentPresenter Content="{Binding ActivePage}"></ScrollContentPresenter>
         </StackPanel>
         <Border Grid.Row="2" Background="Transparent" BorderThickness="0,1,0,0"
                 BorderBrush="{DynamicResource VsBrush.CommandBarMenuBorder}">
